# phaka

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-docs.yml  build-platform.yml  build.yml  ci.yml  codeql.yml  main.yml  security-scan-codeql.yml  security-scan-coverity.yml  setup.yml  test-setup.yml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.c
src/sdk/: CMakeLists.txt  phaka.c  phaka.h  private-platform.h  private-version.h.in  version.c  version.h
