cmake_minimum_required(VERSION 3.24)

project(Phaka
        HOMEPAGE_URL "https://wernerstrydom.com"
        DESCRIPTION "A tool to assist with release engineering"
        VERSION "0.1.0"
        LANGUAGES C)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)

if(WINDOWS)
    set(CPACK_GENERATOR "ZIP")
    set(CPACK_SYSTEM_NAME "windows")
    set(CPACK_PACKAGE_ARCHITECTURE "amd64")
elseif(APPLE)
    set(CPACK_GENERATOR "ZIP;TGZ")
    set(CPACK_SYSTEM_NAME "darwin")
    set(CPACK_PACKAGE_ARCHITECTURE "amd64")
elseif(UNIX)
    set(CPACK_GENERATOR "ZIP;TGZ")
    set(CPACK_SYSTEM_NAME "linux")
    set(CPACK_PACKAGE_ARCHITECTURE "amd64")
endif()

set (CPACK_VERBATIM_VARIABLES           YES)
set (CPACK_INCLUDE_TOPLEVEL_DIRECTORY   OFF)
set (CPACK_INSTALL_PREFIX               "/opt/phaka")
set (CPACK_COMPONENTS_GROUPING          ALL_COMPONENTS_IN_ONE)
set (CPACK_STRIP_FILES                  YES)
set (CPACK_PACKAGE_VENDOR               "Werner Strydom")
set (CPACK_PACKAGE_CONTACT              "hello@phaka.org")
string (TOLOWER "${CMAKE_PROJECT_NAME}" CPACK_PACKAGE_NAME)
string (TOLOWER "${CMAKE_SYSTEM_NAME}"  CPACK_SYSTEM_NAME)
set (CPACK_PACKAGE_VERSION             "${PROJECT_VERSION}")
set (CPACK_PACKAGE_VERSION_MAJOR       "${PROJECT_VERSION_MAJOR}")
set (CPACK_PACKAGE_VERSION_MINOR       "${PROJECT_VERSION_MINOR}")
set (CPACK_PACKAGE_VERSION_PATCH       "${PROJECT_VERSION_PATCH}")
set (CPACK_PACKAGE_DESCRIPTION_SUMMARY "${CMAKE_PROJECT_DESCRIPTION}")

# Sets the output paths so we can upload the packages to GitHub
set (CPACK_OUTPUT_FILE_PREFIX "${CMAKE_BINARY_DIR}/artifacts")
set (CPACK_PACKAGE_FILE_NAME          "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_SYSTEM_NAME}")
if (CPACK_PACKAGE_ARCHITECTURE)
    set (CPACK_PACKAGE_FILE_NAME      "${CPACK_PACKAGE_FILE_NAME}-${CPACK_PACKAGE_ARCHITECTURE}")
endif ()
include(CPack)
